--- a/TrashCollector/Views/Customers/Index.cshtml
+++ b/TrashCollector/Views/Customers/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<TrashCollector.Models.Customer>
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,5 +7,42 @@
 
 <h1>Index</h1>
 
-<h1>Welcome Valued Customer!</h1>
-
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LastName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IdentityUser)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IdentityUser)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.PrimaryKey">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.PrimaryKey">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.PrimaryKey">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
