--- a/TrashCollector/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TrashCollector/Areas/Identity/Pages/Account/Register.cshtml
@@ -26,11 +26,13 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div><div class="form-group">
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.Role"></label>
-                <select asp-for="Input.Role" class="form-control" asp-items="@Model.Roles"></select>
+                <select asp-for="Input.Role" class="form-control" aspitems="@Model.Roles"></select>
                 <span asp-validation-for="Input.Role" class="text-danger"></span>
             </div>
+
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
