--- a/TrashCollector/Views/CustomerModels/Details.cshtml
+++ b/TrashCollector/Views/CustomerModels/Details.cshtml
@@ -54,6 +54,18 @@
             @Html.DisplayFor(model => model.EndOfCycle)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ZipCode)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ZipCode)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdentityUser)
         </dt>
         <dd class = "col-sm-10">
