--- a/TrashCollector/Views/CustomerModels/Index.cshtml
+++ b/TrashCollector/Views/CustomerModels/Index.cshtml
@@ -35,6 +35,12 @@
                 @Html.DisplayNameFor(model => model.EndOfCycle)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Address)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ZipCode)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.IdentityUser)
             </th>
             <th></th>
@@ -63,6 +69,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EndOfCycle)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ZipCode)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IdentityUser.Id)
