Added the default view for employees with dayof the week and zipcode list filter

--- a/TrashCollector/Views/EmployeeModels/Index.cshtml
+++ b/TrashCollector/Views/EmployeeModels/Index.cshtml
@@ -10,6 +10,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<p>
+    <a asp-action="Default">Navigate To Default Page</a>
+</p>
 <table class="table">
     <thead>
         <tr>
